[gd_scene load_steps=15 format=3 uid="uid://uiq4ckc8bnn2"]

[ext_resource type="Script" path="res://scripts/boss_rex.gd" id="1_gce84"]
[ext_resource type="Texture2D" uid="uid://7dckm4sqluhm" path="res://addons/Sprite Pack 2/4 - Percy/Running (32 x 32).png" id="2_uawvi"]
[ext_resource type="Texture2D" uid="uid://cn6rjkgxtlifl" path="res://addons/Sprite Pack 2/4 - Percy/Hurt (32 x 32).png" id="3_rfh67"]
[ext_resource type="Texture2D" uid="uid://bhn2yymok2iw5" path="res://addons/Sprite Pack 2/4 - Percy/Shooting_Fireball (32 x 32).png" id="4_wrutu"]
[ext_resource type="PackedScene" uid="uid://n4wcpx7avysp" path="res://misc/hitbox.tscn" id="5_gi3oa"]
[ext_resource type="AudioStream" uid="uid://co2duy5s3p34q" path="res://addons/Sounds/dino.wav" id="6_8kjix"]
[ext_resource type="AudioStream" uid="uid://dt5iv0cek73c6" path="res://addons/Sounds/fireball.wav" id="7_4esgo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gqyw"]
size = Vector2(38, 22)

[sub_resource type="Animation" id="Animation_jfldx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_uawvi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_haq5v"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rfh67")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_armmx"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_uawvi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fdocp"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_wrutu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b520k"]
_data = {
"RESET": SubResource("Animation_jfldx"),
"hurt": SubResource("Animation_haq5v"),
"running": SubResource("Animation_armmx"),
"shooting": SubResource("Animation_fdocp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5dn2"]
size = Vector2(38, 5)

[node name="BossRex" type="CharacterBody2D" groups=["boss"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_gce84")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_uawvi")
hframes = 6

[node name="HurtSprite" type="Sprite2D" parent="Sprite"]
visible = false
self_modulate = Color(0.85098, 0.137255, 0.137255, 1)
texture = ExtResource("3_rfh67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -14)
shape = SubResource("RectangleShape2D_5gqyw")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b520k")
}
autoplay = "running"

[node name="FireBallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(9, -18)

[node name="GroundDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2
hit_from_inside = true

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(60, 0)

[node name="Hitbox" parent="." instance=ExtResource("5_gi3oa")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -28)
shape = SubResource("RectangleShape2D_u5dn2")
debug_color = Color(0.792157, 0.231373, 0.878431, 0.419608)

[node name="Cry" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8kjix")

[node name="Firing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4esgo")
volume_db = -10.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
